src/css/style.less
/* ... */
.activity-filter {
  .filter-btn {
    display: block;
    float: left;
    .font-size(2.0);
    text-align: center;
    line-height: 20px;
    color: @primary-text;
    background-color: @inactive-grey !important;
    border: 1px solid @inactive-grey !important;
    padding: 5px 10px;
    margin: 0 45px 0 0;
    text-decoration: none;

    &:hover,
    &.active {
      background-color: @active-white !important;
      color: @primary;
      border-color: @primary !important;
      outline-width: 0;
    }
  }

  .switches {
    display: none;
    float: left;
    padding: 5px 0 0;

    > * {
      margin-right: 15px;
      float: left;
    }

    span {
      padding: 0;
      line-height: 20px;
      position: relative;
      top: -3px;
    }

    .switch {
      .font-size(2.4);
      margin-right: 5px;

      &.fa-toggle-on {
        color: @primary;
      }

      &.fa-toggle-off {
        color: @active-grey;
      }
    }
  }

  &.open {
    .filter-btn {
      background-color: @active-white !important;
      color: @primary;
      border-color: @primary !important;
      outline-width: 0;
    }

    .switches {
      display: inline-block;
    }
  }
}

.workflow-head {
  padding: 0 10px 5px;

  .title {
    font-size: 24px;
    margin-bottom: 10px;
  }

  .title > span + span:before {
    padding: 0 5px;
    color: #ccc;
    font-size: 80%;
    content: "/\00a0";
  }

  .title .small {
    font-size: 80%;
  }

  .nav-top-filter,
  .nav-top-filter.nav-pills {
    a,
    .btn,
    > li > a {
      padding: 0 10px;
      line-height: 40px;

      &.active {
        background-color: @active-white;
        color: @primary;
      }
    }

    .dropdown-menu {
      a,
      .btn,
      > li > a {
        padding: 3px 10px;
        line-height: 20px;
      }
    }
  }
}

.bold {
  font-weight: bold;
}

.timeline {
  position: relative;
  margin: 0 auto 10px;

  .line, .duration {
    position: absolute;
    top: 0;
    width: 100%;
    height: 2px;
    margin: 0 auto;
    background-color: @active-grey;
  }

  .duration {
    background-color: @primary;
  }

  .event {
    display: block;
    overflow: hidden;
    position: absolute;
    top: 0;
    left: 0;
    margin: -3px 0;
    color: @active-white;
    background-color: @active-white;
    border: 1px solid @primary;
    height: 8px;
    width: 8px;
    border-radius: 50%;

    &.now {
      background-color: @primary;
    }

    &.future {
      border-color: @active-grey;
      background-color: @active-grey;
    }
  }
}

.popover {
  border-color: @primary;

  .popover-content {
    .title {
      margin: -10px -15px 5px;
      padding: 9px 14px;
      text-align: center;
      color: @active-white;
      background-color: @primary;
    }
  }
}

.popover.top > .arrow {
  border-top-color: @primary;
}

.popover.botom > .arrow {
  border-botom-color: @primary;
}

.popover.left > .arrow {
  border-left-color: @primary;
}

.popover.right > .arrow {
  border-right-color: @primary;
}

.overview {
  display: flex;

  .sidebox {
    width: 30%;
    height: 100%;
  }

  .mainbox {
    width: 70%;
    height: 100%;
  }

  .chatbox {
    position: relative;
    display: flex;
    flex-direction: column;
    height: 100%;

    .alert {
      margin: 0;
      width: 100%;
    }

    .card,
    .card.well {
      border-width: 0;
      margin: 0;
      box-shadow: none;
    }

    .list-box {
      flex-grow: 1;
      display: flex;
      flex-direction: column;
      justify-content: flex-end;

      .activity-list,
      .comment-list,
      .message-list,
      .attachment-list,
      .people-list {
        overflow-x: hidden;
        overflow-y: auto;
      }

      .attachment-list,
      .people-list {
        flex-grow: 1;
        padding: 10px;

        .card {
          padding: 5px;
          margin: 5px auto;
        }
      }
    }

    form {
      max-width: none;
    }
  }
}

.overview-dropdown {
  .fa-pencil-square-o {
    color: @primary-text;
  }

  .dropdown {
    .dropdown-toggle {
      background: #fff none;
      border-color: #ccc;
    }

    .dropdown-menu {
      padding: 5px;
      min-width: 100%;

      .btn {
        display: block;
        width: 100%;
        color: @primary-text;
        background: @active-white none;
        border-color: @active-grey;
        padding: 3px 10px;
        margin: 2px 0;
        font-weight: 300;
      }

      .btn:hover,
      .btn:active {
        color: @primary;
        background: @active-white none;
        border-color: @primary;
      }

      hr {
        margin-top: 10px;
        margin-bottom: 5px;
      }
    }
  }
}
/* ... */

